--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-497.6KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-506.2KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-1.83MB/s(Youtube:不良林), server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-1.93MB/s(Youtube:不良林), server: 38.143.66.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-2.42MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.02MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-988.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-3.09MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-480.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-349.7KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-892.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇨🇦 加拿大-850.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-967.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-663.7KB/s(Youtube:不良林), server: de.v2-ray.com, port: 443, type: vmess, uuid: f9ceacb7-9fa8-424a-a7dc-e1e1d774d0c7, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /fastssh/e234523f/62d7cabd59195/, ws-headers: {Host: de.v2-ray.com}}
+  - {name: 🇯🇵 日本-4.16MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.25MB/s(Youtube:不良林), server: 23.230.146.254, port: 1258, type: vmess, uuid: edeb41cc-a76a-47f2-fa96-b9141e66a2b0, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-497.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-988.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-892.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-850.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-967.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-663.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-497.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-988.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-892.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-850.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-967.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-663.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-497.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-988.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-892.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-850.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-967.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-663.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-497.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-988.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-892.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-850.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-967.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-663.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-497.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-988.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-892.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-850.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-967.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-663.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-497.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-988.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-892.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-850.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-967.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-663.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-497.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-988.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-480.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-892.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-850.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-967.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-663.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
