--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-301.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-410.5KB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
-  - {name: 🇨🇳 中国-777.1KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇮🇹 意大利-325.2KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇺🇸 美国-274.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-534.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇯🇵 日本-156.3KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.46MB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-227.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-243.6KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-704.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-729.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 38.143.66.20, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇦 加拿大-250.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-246.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-344.0KB/s(Youtube:不良林), server: 8.219.49.108, port: 35829, type: vmess, uuid: aaca3cd9-db04-4668-cbfe-53c43d33ab19, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1002.3KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-938.9KB/s(Youtube:不良林), server: 104.156.229.148, port: 36788, type: vmess, uuid: 9fee7249-69fb-490d-e617-cfb54a249932, alterId: 60, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 104.156.229.148}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-410.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.1KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-325.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-534.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-156.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-227.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-704.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-250.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-246.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1002.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-938.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-410.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.1KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-325.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-534.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-156.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-227.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-704.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-250.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-246.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1002.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-938.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-410.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.1KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-325.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-534.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-156.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-227.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-704.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-250.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-246.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1002.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-938.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-410.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.1KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-325.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-534.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-156.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-227.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-704.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-250.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-246.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1002.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-938.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-410.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.1KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-325.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-534.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-156.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-227.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-704.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-250.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-246.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1002.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-938.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-410.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.1KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-325.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-534.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-156.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-227.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-704.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-250.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-246.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1002.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-938.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-410.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.1KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-325.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-534.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-156.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-227.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-243.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-704.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-250.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-246.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1002.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-938.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
